--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-redux": "4.4.5",
+    "react-router": "4.0.0-alpha.5",
+    "react-router-dom": "^4.0.0-beta.5",
     "react-scripts": "1.1.0",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "3.6.0",
+    "redux-devtools-extension": "1.0.0",
+    "redux-thunk": "2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
