--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "classnames": "^2.2.5",
     "concurrently": "^3.5.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
@@ -14,7 +16,8 @@
     "react-scripts": "1.1.0",
     "redux": "3.6.0",
     "redux-devtools-extension": "1.0.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "validator": "^9.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
