Redirects to root when server status code 200

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "concurrently": "^3.5.1",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "15.3.2",
