--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "redux": "3.6.0",
     "redux-devtools-extension": "1.0.0",
     "redux-thunk": "2.1.0",
+    "shortid": "^2.2.8",
     "validator": "^9.4.0"
   },
   "scripts": {
