--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
     "classnames": "^2.2.5",
     "concurrently": "^3.5.1",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
+    "mongoose": "^5.0.2",
     "prop-types": "^15.6.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
