--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "npm run start --prefix backend",
-    "dev": "concurrently \"npm run start\" \"npm run server\""
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
+    "heroku-prebuild": "npm i --prefix backend",
+    "heroku-postbuild": "echo Finish."
   },
   "proxy": "http://localhost:8080"
 }
